# canfar-containers

./: .gitignore  .hadolint.yaml  README.md  agent.md  build.sh  docker-bake.hcl  renovate.json
.github/workflows/: base-foundation.yml  image-pipeline.yml  python-runtime.yml
archive/base/: Dockerfile.retired
doc/: HANDOFF.md  NEXT-SESSION.md  RELEASE-CADENCE.md
dockerfiles/astroml/: Dockerfile  pyproject.toml
dockerfiles/base/: Dockerfile  Dockerfile.save
dockerfiles/carta/: Dockerfile
dockerfiles/carta-psrecord/: Dockerfile
dockerfiles/firefly/: Dockerfile
dockerfiles/firefly/cadc-sso/: .gitignore  README.md  gradle.properties  settings.gradle
dockerfiles/firefly/cadc-sso/lib/: build.gradle
dockerfiles/firefly/cadc-sso/lib/src/main/java/org/opencadc/security/sso/: TokenRelay.java
dockerfiles/firefly/cadc-sso/lib/src/test/java/org/opencadc/security/sso/: FireflyLinkTest.java  (+1 more)
dockerfiles/jupyterlab/: Dockerfile  startup.sh
dockerfiles/marimo/: Dockerfile
dockerfiles/opencode/: Dockerfile
dockerfiles/openvscode/: Dockerfile
dockerfiles/python/: Dockerfile
dockerfiles/python/3.10/: Dockerfile
dockerfiles/python/3.11/: Dockerfile
dockerfiles/python/3.12/: Dockerfile
dockerfiles/python/3.13/: Dockerfile
dockerfiles/python/3.14/: Dockerfile
dockerfiles/terminal/: Dockerfile
dockerfiles/terminal-oc/: Dockerfile
dockerfiles/terminal_opencode/: Dockerfile
dockerfiles/webterm/: .library.manifest.yaml  Dockerfile
dockerfiles/webterm/.library-tool-outputs/default-linter/20260302T192647Z/: hadolint.json
terminal-oc/: Dockerfile
