# AstroML Environment for CANFAR Science Platform
#
# Defines the Python dependencies for the AstroML scientific computing images.
#
# Core dependencies (numpy, scipy, etc.) are locked via uv.lock for
# reproducible builds. PyTorch is NOT included here because it requires
# different wheel indexes per hardware target (CPU vs CUDA vs ROCm).
# PyTorch installation is handled in the Dockerfile per-stage instead.
#
# Dependency groups:
#   - analysis: extended tools (healpy, pandas)
#   - dev: testing and linting
#
# Usage:
#   uv lock                          # regenerate lockfile after edits
#   uv sync --frozen                 # install core deps (reproducible)
#   uv sync --frozen --group analysis  # core + extended analysis tools

[project]
name = "astroml-env"
version = "2026.3.0"
description = "AstroML scientific computing environment for CANFAR"
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "astropy>=6.0",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "pandas>=2.0",
    "astroquery>=0.4.7",
    "photutils>=1.13",
    "scikit-image>=0.24",
    "healpy>=1.16",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]


[tool.uv]
managed = true
